--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -79,6 +79,7 @@
                                 //console.log(tmpArr[i]);
                                 if(String(tmpArr[i]) == "X"){
                                     console.log("This is X");
+                                    console.log("#h" + (i + 1));
                                         $("#h" + String(i + 1)).hide();
                                         document.getElementById("h" + String(i + 1)).innerHTML = tmpArr[i];
                                         $("#s" + String(i + 1)).show();
