--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -78,17 +78,16 @@
                                 //console.log(tmpArr[i]);
                                 //console.log(tmpArr[i]);
                                 if(String(tmpArr[i]) == "X"){
-                                    console.log("This is X");
                                     console.log("#h" + (i + 1));
                                         $("#h" + String(i + 1)).hide();
-                                        document.getElementById("h" + String(i + 1)).innerHTML = tmpArr[i];
+                                        document.getElementById("s" + String(i + 1)).innerHTML = tmpArr[i];
                                         $("#s" + String(i + 1)).show();
                                 }
                                 //console.log(tmpArr[i]);
                                 else if(String(tmpArr[i]) == "O"){
                                     console.log("This is motherfucking O");
                                         $("#h" + String(i + 1)).hide();
-                                        document.getElementById("h" + String(i + 1)).innerHTML = tmpArr[i];
+                                        document.getElementById("s" + String(i + 1)).innerHTML = tmpArr[i];
                                         $("#s" + String(i + 1)).show();
                                 }
                                 else{
