--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -70,23 +70,30 @@
                         var tmpStr = result;
                         if(!tmpStr.indexOf("Leik Lokid") > -1){
                             var tmpArr = tmpStr.split(" ");
-                            console.log(tmpArr);
+                            var lastPushed = "";
+                            //console.log(tmpArr);
                             for(var i = 0; i < tmpArr.length; i++){
                                 if(String(tmpArr[i]) == "X"){
-                                    console.log("#h" + (i + 1));
+                                    //console.log("#h" + (i + 1));
                                         $("#h" + String(i + 1)).hide();
                                         document.getElementById("s" + String(i + 1)).innerHTML = tmpArr[i];
                                         $("#s" + String(i + 1)).show();
+                                        lastPushed = String(i + 1);
                                 }
                                 else if(String(tmpArr[i]) == "O"){
-                                    console.log("This is motherfucking O");
+                                    //console.log("This is motherfucking O");
                                         $("#h" + String(i + 1)).hide();
                                         document.getElementById("s" + String(i + 1)).innerHTML = tmpArr[i];
                                         $("#s" + String(i + 1)).show();
+                                        lastPushed = String(i + 1);
                                 }
                             }
+
                         }
                         else{
+                            $("#h" + lastPushed).hide();
+                            document.getElementById("s" + lastPushed).innerHTML = tmpArr[parseInt(lastPushed)];
+                            $("#s" + lastPushed).show();
                             document.getElementById("winner").innerHTML = String(result);
                             console.log(tmpStr);
                         }
