--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -73,7 +73,7 @@
                         if(tmpStr.indexOf("Leik Lokid") > -1){
                             console.log(tmpStr);
                             $(".theGame").hide();
-                            document.getElementById("#winner").innerHTML = result;
+                            document.getElementById("winner").innerHTML = result;
                             $("#winner").show();
                         }
                         else{
