Restart function added

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -97,7 +97,11 @@
                     })
                 }
                 function refreshPage(){
-                    location.reload();
+                    $.ajax({
+                        type: "post",
+                        url: "/newGame",
+                        data: null
+                    }).done(function(location.reload();))
                 }
         </script>
     </body>
