--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -101,8 +101,9 @@
                         type: "post",
                         url: "/newGame",
                         data: null
-                    }).done(function(location.reload();))
-                }
+                    }).done(function()
+                        location.reload();
+                    )}
         </script>
     </body>
 </html>
