--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -102,7 +102,7 @@
                         url: "/newGame",
                         data: null
                     }).done(function()
-                        location.reload();
+                        console.log("Fallegt");
                     )}
         </script>
     </body>
