--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -101,9 +101,10 @@
                         type: "post",
                         url: "/newGame",
                         data: null
-                    }).done(function()
-                        console.log("Fallegt");
+                    }).done(function(){
+                        loaction.reload();
                     )}
+                }
         </script>
     </body>
 </html>
