--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -102,7 +102,7 @@
                         url: "/newGame",
                         data: null
                     }).done(function(){
-                        loaction.reload();
+                        location.reload();
                     })
                 }
         </script>
