breytta labbakut i higgeesttt

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Herna labba kutur</title>
+        <title>Higgees TicTacToe</title>
 
     </head>
     <body>
