--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE XHMTL 1.0 Strict>
+<DOCTYPE XHTML 1.0 Strict>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>Herna labba kutur</title>
