--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,8 +1,8 @@
-<DOCTYPE XHTML 1.0 Strict>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
     <head>
         <title>Herna labba kutur</title>
-
+        <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     </head>
     <body>
         <div>
