--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>Herna labba kutur</title>
@@ -55,9 +55,7 @@
     			</tr>			
             </table>
         </div>
-        <div id="winner">
-            
-        </div>
+        <div id="winner"></div>
         <div>
             <button onclick="refreshPage()">NewGame</button>
         </div>
@@ -66,6 +64,7 @@
 
         <!-- Use ajax to submit form, retrive joke and display on page -->
         <script type="text/javascript">
+        //<![CDATA[
                 function playTurn(a) {
                     $.ajax({
                         type: "post",
@@ -97,7 +96,9 @@
                                 }
                             }
                         }
-                    })
+                    }).fail(function() {
+                            console.log("Fatal Error!");
+                    });
                 }
                 function refreshPage(){
                     $.ajax({
@@ -108,6 +109,7 @@
                         location.reload();
                     })
                 }
+                //]]>
         </script>
     </body>
 </html>
