--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -2,13 +2,8 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-<<<<<<< HEAD
-        <title>Herna labba kutur</title>
+        <title>TicTacToe</title>
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-=======
-        <title>Higgees TicTacToe</title>
-
->>>>>>> 19950f5c7e828b911afc3b41094452f93adf5670
     </head>
     <body>
         <div>
