selenium test stuff

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -57,7 +57,7 @@
         </div>
         <div id="winner"></div>
         <div>
-            <button onclick="refreshPage()">NewGame</button>
+            <button id="newGame" onclick="refreshPage()">NewGame</button>
         </div>
         <!-- Load jquery -->
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
