--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -5,7 +5,7 @@
         <title>TicTacToe</title>
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     </head>
-    <body bgcolor="#707070">
+    <body >
         <div>
             <h1>TicTacToe</h1>
         </div>
