--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -9,6 +9,9 @@
         <div>
             <h1>TicTacToe</h1>
         </div>
+	<div>
+	   <p>haha</p>
+	</div>
         <div class="theGame">
             <table>
             	<tr>
