Breyting a index.html

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -59,6 +59,9 @@
         <div>
             <button id="newGame" onclick="refreshPage()">NewGame</button>
         </div>
+	<div>
+		<h2>Einar Ágúst er fullkominn</h2>
+	</div>
         <!-- Load jquery -->
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
