--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -10,7 +10,7 @@
             <h1>TicTacToe</h1>
         </div>
 	<div>
-	   <p>haha</p>
+	   <p>Besti leikur i heimi</p>
 	</div>
         <div class="theGame">
             <table>
